--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,6 +6,6 @@
   "git.autofetch": true,
   "terminal.integrated.fontFamily": "MesloLGS NF",
   "extensions.ignoreRecommendations": true,
-  "workbench.colorTheme": "Noctis Azureus",
+  "workbench.colorTheme": "Noctis Obscuro",
   "security.workspace.trust.untrustedFiles": "open"
 }
