--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,7 @@
   "editor.formatOnSave": true,
   "editor.defaultFormatter": "esbenp.prettier-vscode",
   "editor.minimap.enabled": false,
+  "editor.bracketPairColorization.enabled": true,
   "git.autofetch": true,
   "terminal.integrated.fontFamily": "MesloLGS NF",
   "extensions.ignoreRecommendations": true,
